# async_analysis

./: .flake8  .gitignore  Dockerfile  README.md  main.py  memray-flamegraph-memray.html  profile_run.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
analyzer/: fetcher.py  loader.py  report.py
data/: urls.json
