
[tool.poetry]
name = "async-analyzer"
version = "0.1.0"
description = "A Python application for asynchronous data analysis."
authors = ["salehaTanveer <saleha.zia900@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "analyzer" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiohttp = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
async-analyze = "main:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
